<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mnuBackground"
        android:title="@string/mnu_background"
        app:showAsAction="never" >
        <menu >
            <item
                android:id="@+id/mnuBlue"
                android:title="@string/mnu_bg_blue" />
            <item
                android:id="@+id/mnuWhite"
                android:title="@string/mnu_bg_white" />
            <item
                android:id="@+id/mnuGreen"
                android:title="@string/mnu_bg_green" />
            <item
                android:id="@+id/mnuRed"
                android:title="@string/mnu_bg_red" />
        </menu>
    </item>
    <item
        android:id="@+id/mnuAbout"
        android:title="@string/mnu_about"
        android:visible="true"
        app:showAsAction="never" />
</menu>